--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -1,8 +1,8 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name":"My extension",
     "version":"1.01",
-    "permissions":["system.cpu","system.memory","system.display"],
+    "permissions":["system.cpu","system.memory","system.display","system.storage"],
     "content_scripts":[
         {
             "matches":[
@@ -12,9 +12,9 @@
         }
     ],
     "background":{
-        "scripts":["background.js"]
+        "service_worker":"background.js"
     },
-    "browser_action":{
-        
+    "action":{
+
     }
 }
